Add build sub-package and dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,6 @@ where = ["src"]
 [tool.setuptools_scm]
 version_scheme = "guess-next-dev"
 local_scheme = "node-and-date"
+
+[project.optional-dependencies]
+mpi = ["mpi4py", "virgodc>=1.0.2"]
