--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: Install module
       run: |
-        pip install -e .
+        pip install -e ".[mpi]"
 
     - name: Single process test
       run: |
